--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-	<title>Stephen Cramer Lighting Design</title>
+	<title>Stephen Cramer Productions</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 	<h1>Stephen Cramer Lighting Design</h1>
-	<p>Advanced Lighting and Atmospheric Design Performance for Live Productions</p>
+	<p>Lighting Production, Performance & Design</p>
 </body>
 </html>
