Update to text SCC Productions

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Stephen Cramer Lighting Design</h1>
+	<h1>Stephen Cramer Productions</h1>
 	<p>Lighting Production, Performance & Design</p>
 </body>
 </html>
